# inai_hackaton_credit_score

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.ru.md  bot.py  config.py  docker-compose.yml  entrypoint.sh  finguard_math.md  flake.nix  fly.toml  main.py  pyproject.toml  requirements.txt  triton.Dockerfile  triton_client.py  verify_db.py
database/: db.py  models.py
handlers/: notifications.py  purchase.py  purchase_old.py  settings.py  start.py  status.py  voice.py
keyboards/: inline.py  reply.py
middlewares/: notification.py  onboarding_check.py
model_repository/category_model/: config.pbtxt
model_repository/category_model/1/: model.pkl  model.py
model_repository/score_model/: config.pbtxt
model_repository/score_model/1/: model.joblib  model.py
model_repository/whisper/: config.pbtxt
model_repository/whisper/1/: model.py
services/: __init__.py  calculator.py  calculator_advanced.py  explainer.py  llm.py  proactive_alerts.py  reason_engine.py  reserve_advisor.py  triton.py  whisper.py
services/tests/: test_explainer.py  test_reason_engine.py
src/hackaton_credit_score/: __init__.py
states/: fsm.py
tests/: test_calculator.py  test_category_threshold.py  test_db_schema.py  test_llm_parsing.py  test_models_stats.py  test_proactive_alerts.py  test_reserve_advisor.py  test_voice_handler.py  test_whisper_service.py
